--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "domits8b037bad": {
+    "domits420cd8cf": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
