--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
+    "ui-react": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
