removed indexpack and eslintcache from git. it are local cache files that should not be tracked

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,5 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+/node_modules/.cache/
 /node_modules/.cache/default-development/
