changed backend environment

--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -1,9 +1,9 @@
 {
   "aws_project_region": "eu-north-1",
-  "aws_cognito_identity_pool_id": "eu-north-1:a50499e9-3bb6-4e6c-977a-f84586436546",
+  "aws_cognito_identity_pool_id": "eu-north-1:6bfb5a59-eeca-4b79-991d-33bd27fa3afe",
   "aws_cognito_region": "eu-north-1",
-  "aws_user_pools_id": "eu-north-1_m5HzBwhiE",
-  "aws_user_pools_web_client_id": "63efhnr8cjmibmdltcojlevh5d",
+  "aws_user_pools_id": "eu-north-1_aOTlOCXaf",
+  "aws_user_pools_web_client_id": "10sn5elruv9nf6ms20vi8jo860",
   "oauth": {},
   "aws_cognito_username_attributes": [
     "EMAIL"
@@ -22,5 +22,7 @@
   },
   "aws_cognito_verification_mechanisms": [
     "EMAIL"
-  ]
+  ],
+  "aws_user_files_s3_bucket": "domits7117256b4cd444d4ae545fd24c1c6319155945-develop",
+  "aws_user_files_s3_bucket_region": "eu-north-1"
 }
