--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
