--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ amplify/.config/local-*
 amplify/logs
 amplify/mock-data
 amplify/mock-api-resources
-amplify/#current-cloud-backend/amplify-meta.json
+amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
