added cypress in installation

--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
+    "cypress": "^13.6.2",
     "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "faker": "^6.6.6"
   },
   "author": "",
   "license": "ISC",
