cd should be Domits since we dont have a web yet

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd web
+          cd Domits
           npm ci --verbose
 
       - name: Cypress install
