--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
+    "typescript": "^4.9.5",
     "ui-react": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
