--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cypress:open": "cypress open"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "cypress": "^13.6.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
