--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,33 +11,24 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      # Debug: List contents of the web directory
-      - name: List contents of web directory
-        run: ls -la web
-
-      # Navigate to the web folder
-      - name: Navigate to web folder
-        run: cd web
-
-      # Debug: List contents of the current directory
-      - name: List contents of current directory
-        run: ls -la
-
       # Install NPM dependencies, cache them correctly
+
       - name: Install dependencies
         run: |
-          pwd
+          cd web
           npm ci --verbose
 
       - name: Cypress install
         uses: cypress-io/github-action@v6
         with:
+          working-directory: web
           runTests: false
 
       # and run all Cypress tests
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          working-directory: web
           build: npm run build
           start: npx vite --host
