--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # Install NPM dependencies, cache them correctly
 
+      # Install NPM dependencies, cache them correctly
       - name: Install dependencies
         run: |
           cd web
           npm ci --verbose
+
+      # Copy AWS export file
+      - name: Copy AWS export file
+        run: cp /path/to/your/aws-export-file.js /home/runner/work/Domits/Domits/web
 
       - name: Cypress install
         uses: cypress-io/github-action@v6
@@ -32,3 +36,4 @@ jobs:
           working-directory: web
           build: npm run build
           start: npx vite --host
+
