added amplify pull

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,11 @@ jobs:
         run: |
           cd web
           npm ci --verbose
+          
+      - name: Amplify Pull
+        run: amplify pull
 
-#      # Copy AWS export file
-#      - name: Copy AWS export file
-#        run: cp /home/runner/work/Domits/Domits/web/src/aws-exports.js /home/runner/work/Domits/Domits/web
+
 
 
       - name: Cypress install
