added configure to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,16 @@ jobs:
           cd web
           npm ci --verbose
           
-      - name: Amplify Pull
-        run: amplify pull
+      - name: configure amplify
+        uses: ambient-light/amplify-cli-action@0.3.0
+        with:
+            amplify_command: configure
+            amplify_env: develop
+            amplify_cli_version: 10.6.1
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: eu-north-1
 
 
 
