--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       # Install NPM dependencies, cache them correctly
       - name: Install dependencies
@@ -18,16 +18,16 @@ jobs:
           cd web
           npm ci --verbose
           
-#      - name: configure amplify
-#        uses: ambientlight/amplify-cli-action@0.3.0
-#        with:
-#            amplify_command: configure
-#            amplify_env: develop
-#            amplify_cli_version: 10.6.1
-#        env:
-#            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#            AWS_REGION: eu-north-1
+      - name: configure amplify
+        uses: ambientlight/amplify-cli-action@0.3.0
+        with:
+            amplify_command: configure
+            amplify_env: develop
+            amplify_cli_version: 10.6.1
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: eu-north-1
 
 
 
