--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "lodash": "^4.17.21",
+    "react-datepicker": "^6.1.0",
     "react-icons": "^5.0.1"
   }
 }
