--- a/web/package.json
+++ b/web/package.json
@@ -13,10 +13,11 @@
     "aws-sdk": "^2.1549.0",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
     "stripe": "^14.14.0",
