--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "router": "^1.3.8",
     "stripe": "^14.14.0",
     "typescript": "^4.9.5",
