--- a/web/package.json
+++ b/web/package.json
@@ -38,7 +38,8 @@
     "cypress": "^13.6.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "vite": "^5.1.3"
   },
   "author": "",
   "license": "ISC",
