--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-native": "^0.73.4",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
