--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
