--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.21",
     "react-icons": "^5.0.1",
     "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.0.3"
   }
 }
