--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "react": "18.2.0",
-    "react-native": "^0.73.4",
+    "react-native": "^0.73.5",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
