--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
