--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -10,10 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-native-community/blur": "^4.4.0",
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "^0.73.5",
     "react-native-gesture-handler": "^2.15.0",
