Pods deleted and installed + new ios build for testflight

--- a/app/Domits/ios/Podfile
+++ b/app/Domits/ios/Podfile
@@ -30,6 +30,12 @@ target 'Domits' do
 
   use_react_native!(
     :path => config[:reactNativePath],
+    :hermes_enabled => true
+  )
+  
+
+  use_react_native!(
+    :path => config[:reactNativePath],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
