--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "jest": "react-scripts test --watch",
     "cypress:open": "cypress open"
   },
   "devDependencies": {
