--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,9 @@
     "cypress:open": "cypress open"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "babel-eslint": "^10.1.0",
     "cypress": "^13.6.2",
     "eslint": "^8.56.0",
