--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.73.4",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.11.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
