--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-calendars": "^1.1304.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.11.3",
