--- a/app/Domits/android/gradle.properties
+++ b/app/Domits/android/gradle.properties
@@ -39,3 +39,9 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Signing configuration for release build
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Domits123
+MYAPP_RELEASE_KEY_PASSWORD=Domits123
