--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^5.3.12",
     "aws-sdk": "^2.1571.0",
     "dotenv": "^16.4.1",
+    "fuse.js": "^7.0.0",
     "gh": "^2.8.9",
     "jest": "^27.5.1",
     "react": "^18.2.0",
