--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-native-community/blur": "^4.4.0",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.8",
+    "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "react-icons": "^5.0.1",
     "react-native-elements": "^3.4.3",
