--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.3",
+    "@react-google-maps/api": "^2.19.3",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,12 +17,14 @@
     "dotenv": "^16.4.1",
     "fuse.js": "^7.0.0",
     "gh": "^2.8.9",
+    "google-maps-react": "^2.0.6",
     "jest": "^27.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
