--- a/app/Domits/ios/Domits/Info.plist
+++ b/app/Domits/ios/Domits/Info.plist
@@ -46,6 +46,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSCameraUsageDescription</key>
+  <string>Toegang tot de camera is nodig om QR-codes te scannen.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Test</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
