--- a/app/Domits/ios/Podfile
+++ b/app/Domits/ios/Podfile
@@ -5,6 +5,17 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
+def node_require(script)
+  # Resolve script with node to allow for hoisting
+  require Pod::Executable.execute_command('node', ['-p',
+    "require.resolve(
+       '#{script}',
+        {paths: [process.argv[1]]},
+     )", __dir__]).strip
+end
+
+node_require('../node_modules/react-native/scripts/react_native_pods.rb')
+
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
@@ -32,7 +43,6 @@ target 'Domits' do
     :path => config[:reactNativePath],
     :hermes_enabled => true
   )
-  
 
   use_react_native!(
     :path => config[:reactNativePath],
