--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -19,10 +19,13 @@
     "react": "18.2.0",
     "react-native": "^0.73.4",
     "react-native-calendars": "^1.1304.1",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.11.3",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.4",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
