--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -21,6 +21,7 @@
     "react-native-calendars": "^1.1304.1",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.11.3",
     "react-native-paper": "^5.12.3",
