--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
@@ -20,6 +21,7 @@
     "react-native": "^0.73.4",
     "react-native-calendars": "^1.1304.1",
     "react-native-camera": "^4.2.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
