--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
+    "openai": "^4.32.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
     "react-native-calendars": "^1.1304.1",
