--- a/web/package.json
+++ b/web/package.json
@@ -70,5 +70,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^3.6.0",
+    "react-date-range": "^2.0.0-alpha.4"
   }
 }
