--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "router": "^1.3.8",
     "stripe": "^14.14.0",
     "typescript": "^4.9.5",
