--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,6 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.1.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.14",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-date-pickers": "^7.1.0",
     "@react-google-maps/api": "^2.19.3",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.6",
@@ -43,7 +38,6 @@
     "react-select-country-list": "^2.2.3",
     "router": "^1.3.8",
     "stripe": "^14.14.0",
-    "styled-components": "^6.1.8",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "ui-react": "^1.0.3",
@@ -82,6 +76,7 @@
   },
   "dependencies": {
     "date-fns": "^3.6.0",
-    "react-date-range": "^2.0.0-alpha.4"
+    "react-date-range": "^2.0.0-alpha.4",
+    "react-image-gallery": "^1.3.0"
   }
 }
