--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,6 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.1",
-    "fuse.js": "^7.0.0",
     "gh": "^2.8.9",
     "jest": "^27.5.1",
     "react": "^18.2.0",
@@ -74,7 +73,9 @@
     ]
   },
   "dependencies": {
+    "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
+    "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4"
   }
 }
