--- a/web/package.json
+++ b/web/package.json
@@ -77,6 +77,7 @@
   "dependencies": {
     "date-fns": "^3.6.0",
     "react-date-range": "^2.0.0-alpha.4",
-    "react-image-gallery": "^1.3.0"
+    "react-image-gallery": "^1.3.0",
+    "validator": "^13.11.0"
   }
 }
