--- a/web/package.json
+++ b/web/package.json
@@ -5,11 +5,6 @@
   "main": "index.js",
   "peerDependencies": {
     "@aws-amplify/ui-react": "^5.3.3",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.14",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-date-pickers": "^7.1.0",
     "@react-google-maps/api": "^2.19.3",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.6",
@@ -56,8 +51,7 @@
     "babel-eslint": "^10.1.0",
     "cypress": "^13.7.2",
     "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "faker": "^6.6.6"
+    "eslint-plugin-react": "^7.33.2"
   },
   "author": "",
   "license": "ISC",
