--- a/web/package.json
+++ b/web/package.json
@@ -71,7 +71,6 @@
     "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
     "react-country-flag": "^3.1.0",
-    "react-date-range": "^2.0.0-alpha.4",
-    "react-image-gallery": "^1.3.0"
+    "react-date-range": "^2.0.0-alpha.4"
   }
 }
