--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-picker/picker": "^2.7.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
+    "aws-amplify": "^6.0.30",
     "openai": "^4.32.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
