Added @types/node-fetch to see if the build will work

--- a/web/package.json
+++ b/web/package.json
@@ -67,6 +67,7 @@
     ]
   },
   "dependencies": {
+    "@types/node-fetch": "^2.6.11",
     "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
     "immer": "^10.0.4",
