--- a/web/package.json
+++ b/web/package.json
@@ -44,11 +44,12 @@
     "cypress:open": "cypress open"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
+    "@babel/core": "^7.24.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.23.3",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.7.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2"
