--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
     "aws-amplify": "^6.2.0",
+    "aws-sdk": "^2.1613.0",
     "openai": "^4.32.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
