--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.3.0",
+    "@aws-amplify/core": "^6.2.0",
     "@aws-amplify/react-native": "^1.0.28",
     "@aws-amplify/ui-react-native": "^2.1.6",
     "@react-native-async-storage/async-storage": "^1.23.1",
