--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@aws-amplify/react-native": "^1.0.28",
-    "@aws-amplify/ui-react-native": "^2.1.6",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -21,7 +20,8 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
-    "aws-amplify": "^6.2.0",
+    "amazon-cognito-identity-js": "^6.3.13",
+    "aws-amplify": "^5.3.12",
     "aws-sdk": "^2.1613.0",
     "openai": "^4.32.0",
     "react": "18.2.0",
@@ -30,6 +30,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.11.3",
