--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/auth": "^6.3.0",
     "@aws-amplify/core": "^6.2.0",
     "@aws-amplify/react-native": "^1.0.28",
+    "@aws-amplify/ui-react-native": "^2.1.6",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/masked-view": "^0.1.11",
