--- a/web/package.json
+++ b/web/package.json
@@ -48,11 +48,15 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
+    "babel-preset-react-app": "^10.0.1",
     "cypress": "^13.7.2",
     "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0"
   },
   "author": "",
   "license": "ISC",
