--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
@@ -77,6 +78,7 @@
     "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
     "immer": "^10.0.4",
+    "jest-environment-jsdom": "^29.7.0",
     "minimist": "1.2.8",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4"
