--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@react-native-community/blur": "^4.4.0",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.8",
+    "aws-amplify": "^5.3.18",
+    "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "react-icons": "^5.0.1",
