Booking engine laatste aanpassingen

--- a/web/package.json
+++ b/web/package.json
@@ -82,6 +82,7 @@
     "axios": "^1.7.2",
     "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "immer": "^10.0.4",
     "jest-environment-jsdom": "^29.7.0",
     "minimist": "1.2.8",
