--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -6,10 +6,10 @@
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
-    "framework": "react-native",
+    "framework": "react",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "/",
+      "DistributionDir": "build",
       "BuildCommand": "npm.cmd run-script build",
       "StartCommand": "npm.cmd run-script start"
     }
