--- a/web/package.json
+++ b/web/package.json
@@ -91,6 +91,7 @@
     "minimist": "1.2.8",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
+    "react-load-script": "^0.0.6",
     "react-resizable": "^3.0.5"
   },
   "jest": {
