fix path for cypress

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          working-directory: web
+          working-directory: web/src/tests
           start: npx vite --host
 
       # Run Jest tests
